[project]
name = "qwen-tts-api"
version = "0.1.0"
description = "Python package exposing qwen-tts and qwen-asr speech functionality as an API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-tts>=0.0.5",
    "qwen-asr>=0.0.5",
    "fastapi",
    "pydantic",
    "uvicorn",
    "python-multipart",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.uv]
override-dependencies = [
    "transformers==4.57.6",
]
